<resources>
    <string name="app_name">TriviaApp</string>
    <string name="who_is_the_best_cricketer_in_the_world">Who is the best cricketer in the world?</string>
    <string name="the_answers_selected_are_as_follows">The answers selected are as follows:</string>
    <string name="your_answer">Your Answer</string>
    <string name="what_are_the_colors_in_the_national_flag">What are the colors in the national flag?</string>
    <string name="finish">Finish</string>
    <string name="history">History</string>
    <string name="enter_your_name">Enter Your name</string>
    <string name="what_is_your_name">What is Your Name?</string>
    <string name="submit">Submit</string>
</resources>