<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="Summary"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/summaryAnswer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hii Rishabh Sharma"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/the_answers_selected_are_as_follows"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_margin="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_is_the_best_cricketer_in_the_world"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/summaryAnswer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_answer"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_are_the_colors_in_the_national_flag"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/summaryAnswer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_answer"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/finish"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/history"
        android:layout_gravity="center"/>

</LinearLayout>